# fidcsv

./: .gitignore  llm_promot.txt  pyproject.toml  rules.md
fidcsv/: main.py
fidcsv/config/: config.yaml
tests/: test_config.py  test_field_extraction.py
